--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <p align="center" style="font-size:300% ; background-color:white;" > THIS IS TRIBUTE PAGE </p>
 
-       <p align="center" style="background-color:white"> <img src="public/th.jpg" > </p> 
+       <p align="center" style="background-color:white"> <img src="th.jpg" > </p> 
  <p align="center"style"font-size:100%">Think About Your Career </p> 
 <h1 align="center" font-size=150%> 1.Study </h1><p align="center" font-size:75%> Basic step of decission of every career is study. this is very important to choose correct decision about your choice of study</p>
 <h2 align="center" font-size=150%> 2.Practicals </h2><p align="center" font-size:75%> Things which we have studied is really important to apply on our real life projects.</p>
